--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								</li>
 							</ul>
 							<div class="offers-description__btn">
-								<button class="button show-modal">Заказат подбор</button>
+								<button class="button show-modal">Заказать подбор</button>
 							</div>
 						</div>
 					</div>
@@ -447,7 +447,7 @@
 	</section>
 	<section class="screen screen_padding" id="price">
 		<div class="container">
-			<h2 class="title">Вам <span class="title__highlight">необходим персонал</span> модельной внешности?</h2>
+			<h2 class="title">Вам <span class="title__highlight">необходим персонал</span><br>модельной внешности?</h2>
 			<div class="row justify-content-center">
 				<div class="col-lg-4 col-md-8 col-sm-8">
 					<div class="feedback">
