--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 										Наше агенство «Smart Models» оказывает услуги подбора персонала для постоянной или проектной работы.
 									</p>
 									<p>
-										Наша основная cпециализация - подбор персонала модельной внешности для клиентов и проектов, где эстетический вид имеет особое значение.
+										Мы подбираем персонал модельной внешности для клиентов и проектов, где эстетический вид имеет особое значение.
 									</p>
 								</div>
 							</div>
@@ -331,7 +331,7 @@
 								</h3>
 								<div class="qualities__text">
 									<p>
-										Основной принцип нашей работы - это индивидуальный подход к каждому нашему клиенту.
+										Основной принцип работы нашего агенства - это индивидуальный подход к каждому нашему клиенту.
 									</p>
 									<p>
 										Доверив подбор персонала нашему агентству «Smart Models», вы можете быть уверены в том, что рекомендуемые кандидаты будут соответствовать всем вашим требованиям.
