--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
 								</h3>
 								<div class="qualities__text">
 									<p>
-										Наше агенство «Smart Models» оказывает услуги подбора персонала для постоянной или проектной работы.
+										Мы предлагаем подбор квалифицированного персонала с внешними данными класса А.
 									</p>
 									<p>
-										Мы подбираем персонал модельной внешности для клиентов и проектов, где эстетический вид имеет особое значение.
+										В сегменте, где эстетика играет большую роль - все должно быть на высоте, поэтому ваш персонал будет обладать не только профессиональными компетенциями, но и эффектной внешностью и развитыми коммуникативными навыками. 
 									</p>
 								</div>
 							</div>
