--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
 								</h3>
 								<div class="qualities__text">
 									<p>
-										Наше агенство «Smart Models» оказывает услуги подбора персонала для постоянной или проектной работы.
+										Каждый кандидат, которого мы рекомендуем - проходит строгий отбор нашими специалистами, включая такие этапы как анкетирование, личное интервью и тестирование на выявление требуемых навыков.
 									</p>
 									<p>
-										Наша основная cпециализация - подбор персонала модельной внешности для клиентов и проектов, где эстетический вид имеет особое значение.
+										Мы рекомендуем только тех, кто отвечает всем необходимым требованиям позиции в квалификации.
 									</p>
 								</div>
 							</div>
