--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 									<div class="adv__number">1</div>
 									<div>
 										<h3 class="adv__title">Компаний и их руководителей</h3>
-										<p>Cопровождение на деловых встречах и конференциях, организация поездок, планирование рабочего графика, подготовка материалов и т.д</p>
+										<p>Cопровождение на деловых встречах и конференциях, организация поездок, планирование рабочего графика, подготовка материалов и т.д</p><br><br>
 									</div>
 								</div>
 							</div>
