--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@
 								</h3>
 								<div class="qualities__text">
 									<p>
-										Основной принцип работы нашего агенства - это индивидуальный подход к каждому нашему клиенту.
+										Мы работаем в сфере модельного бизнеса с 2012 года.
 									</p>
 									<p>
-										Доверив подбор персонала нашему агентству «Smart Models», вы можете быть уверены в том, что рекомендуемые кандидаты будут соответствовать всем вашим требованиям.
+										И за это время мы создали свою стандартизированную систему отбора моделей, основанную на индивидуальных потребностях каждого нашего клиета, которая гарантирует получение высоких результатов и WOW эффекта от работы подобранных нами моделей.
 									</p>
 								</div>
 							</div>
