--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 								</h3>
 								<div class="qualities__text">
 									<p>
-										Мы предлагаем подбор квалифицированного персонала с внешними данными класса А.
+										Мы подбираем кандидатов модельной внешности, которые смогут осуществить любую вашу задачу.
 									</p>
 									<p>
 										В сегменте, где эстетика играет большую роль - все должно быть на высоте, поэтому ваш персонал будет обладать не только профессиональными компетенциями, но и эффектной внешностью и развитыми коммуникативными навыками. 
