--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 								</h3>
 								<div class="qualities__text">
 									<p>
-										В сегменте, где эстетика играет большую роль - все должно быть <br> на высоте, поэтому ваш персонал будет обладать не только профессиональными компетенциями, которые необходимы для выполнения ваших задач, но и эффектной внешностью и развитыми коммуникативными навыками. 
+										В сегменте, где эстетика играет большую роль - все должно быть <br> на высоте, поэтому ваш персонал будет обладать не только профессиональными компетенциями, которые необходимы для выполнения <br> ваших задач, но и эффектной внешностью и развитыми коммуникативными навыками. 
 									</p>
 								</div>
 							</div>
