--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 						подбор персонала модельной
 						внешности в Москве
 					</h1>
-					<h3 class="main__description">
+				<!-- Custom Browsers Color End <h3 class="main__description">
 						Для клиентов и проектов,
 						где эстетический вид имеет особое значение
-					</h3>
+					</h3>-->	
 					<div class="main__btns">
 						<button class="button button_outlined button_offset to-services">
 							Наши услуги
