--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<form class="feedback__form" id="info-form">
 				<label class="feedback__item">
 					<p class="feedback__label">Ваше имя</p>
-					<input type="text" name="name" class="feedback__input" placeholder="Введите ваше имя или ФИО">
+					<input type="text" name="name" class="feedback__input" placeholder="Введите ваше имя">
 				</label>
 				<label class="feedback__item">
 					<p class="feedback__label">Ваше телефон</p>
