--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 										Мы работаем в сфере модельного бизнеса с 2012 года.
 									</p>
 									<p>
-										И за это время мы создали свою стандартизированную систему отбора моделей, основанную на индивидуальных потребностях каждого нашего клиента, которая гарантирует получение высоких результатов и WOW эффекта от работы подобранных моделей нашим агенством.
+										И за это время мы создали свою стандартизированную систему отбора моделей, основанную на индивидуальных потребностях каждого нашего клиента, которая гарантирует получение высоких результатов от работы подобранных моделей нашим агенством.
 									</p>
 								</div>
 							</div>
